[tool.poetry]
name = "whoxyd"
version = "0.1.1"
description = "Get useable historical data from the whoxy API"
authors = ["puzzlepeaches <null@localhost.local>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
validators = "^0.19.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wd = "whoxyd.main:main"
whoxyd = "whoxyd.main:main"
